k8s/apps-manifests/argocd/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: argocd
  name: argocd-ingress-gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd-ingress-cert # This should match the Certificate secretName
    hosts:
    - argo.aks.diehlabs.com # This should match a DNS name in the Certificate
