k8s/apps-manifests/argocd/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-cd-https
  namespace: argocd
spec:
  hosts:
  - argo.aks.diehlabs.com
  gateways:
  - argocd-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    route:
    - destination:
        port:
          number: 80
        host: argocd-server
